// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Algolia template handles route item 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/schedules/111"
  >
    <div
      class="aa-ItemContent tw-mt-1"
    >
      <div
        class="tw-flex-grow"
      >
        <div
          class="tw-flex tw-items-baseline tw-gap-1"
        >
          <span
            class="tw-basis-4 tw-flex-shrink-0"
          />
          <div
            class="aa-ItemContentTitle tw-flex-grow tw-font-normal"
          >
            <span />
             
            <span
              class="tw-text-nowrap tw-text-gray-500 tw-text-sm tw-font-normal notranslate"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Location template renders 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/transit-near-me?latitude=42.352271&longitude=-71.055242&address=South+Station,+Boston,+MA"
  >
    <div
      class="aa-ItemContent"
    >
      <div
        class="tw-flex tw-items-baseline tw-gap-1"
      >
        <span
          aria-hidden="true"
          class="fa fa-fw fa-map-marker tw-basis-4 tw-flex-shrink-0"
        />
        <span
          class="aa-ItemContentTitle tw-flex-grow"
        >
          123 Main St
        </span>
      </div>
      <div
        class="tw-text-nowrap tw-flex-grow-0 tw-text-gray-500 tw-text-sm tw-font-normal"
      >
        Town, MA
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Popular template renders 1`] = `
<DocumentFragment>
  <a
    class="aa-ItemLink"
    href="/transit-near-me?latitude=42.352271&longitude=-71.055242&name=South+Station"
  >
    <div
      class="aa-ItemContent"
    >
      <div
        class="tw-flex-grow tw-mt-1"
      >
        <div
          class="tw-flex tw-items-baseline tw-flex-grow"
        >
          <div
            class="tw-basis-6"
          />
          <strong
            class="aa-ItemContentTitle notranslate"
          >
            South Station
          </strong>
        </div>
        <div
          class="tw-flex tw-gap-1 tw-mt-2 tw-mb-1"
        >
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          />
          <span
            class="c-search-result__feature-icons"
          >
            <span
              class="c-icon__cr-zone"
            >
              Zone 1A
            </span>
          </span>
        </div>
      </div>
      <div
        class="tw-text-nowrap tw-text-gray-500 tw-text-sm tw-font-normal"
      >
        Town, MA
      </div>
    </div>
  </a>
</DocumentFragment>
`;
